src/global/styles.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@300;400;500;600;700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");

:root {
  /* app margins */
  --app-container-margin: 40px auto;
  --top-section-margin: 25px 0 0 0;
  --content-section-margin: 30px 0 0 0;
  --bottom-section-margin: 50px 0 15px 0;

  /* global styles */
  --box-shadow-one: rgba(0, 0, 0, 0.16) 0px 1px 4px;
  --box-shadow-two: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  --selected-font-color: var(--bright-slate);

  /* layouts margins */
  --section-title-margin: 60px auto 35px auto;

  /* colors */
  --bright-slate: #00edfa;
  --light-green: rgba(70, 201, 70);
  --slate: #3d4c61;
  --dark-transparent-one: rgba(0, 0, 0, 0.7);
  --dark-transparent-two: rgb(40, 54, 93);
  --dark-transparent-three: rgba(0, 0, 0, 0.3);
  --white-transparent-one: rgba(255, 255, 255, 0.1);
  --white-transparent-two: rgba(255, 255, 255, 0.1);
  --white: #f0f7ff;
  --pink: #df24be;
  --pink-transparent: rgba(223, 36, 190, 0.7);
  --light-blue: rgb(2, 179, 254);
  --light-blue-2: rgb(2, 179, 254, 0.9);
  --light-blue-3: rgb(2, 179, 254, 0.7);

  /* header styles */
  --header-width: 95%;
  --header-max-width: 876px;
  --header-height: 310px;
  --header-border: 0px solid rgb(0, 237, 250, 0.3);
  --border-radius-one: 5px;

  /* wrapper styles (navbar, content, footer, ...) */
  --wrapper-bg-color: var(--dark-transparent-two);
  --wrapper-border-radius: var(--border-radius-two);
  --wrapper-border: 1px solid rgba(0, 0, 0, 0.3);
  --wrapper-inner-shadow: rgba(0, 0, 0, 0.1) 0px 2px 4px 1px inset;

  /* navbar */
  --selected-bg-color: rgba(255, 255, 255, 0.09);
  --border-radius-two: 3px;

  /* content wrapper styles */
  --content-padding: 20px 0px 20px 0px;
  --content-max-width: 878px;

  /* animation related */
  --slide-transition: 500ms;
  --waver-duration: 2s;
}

body {
  background-color: #261d54;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg %3E%3Cpolygon fill='%232c286a' points='1600 160 0 460 0 350 1600 50'/%3E%3Cpolygon fill='%2334367a' points='1600 260 0 560 0 450 1600 150'/%3E%3Cpolygon fill='%233b438a' points='1600 360 0 660 0 550 1600 250'/%3E%3Cpolygon fill='%2343519a' points='1600 460 0 760 0 650 1600 350'/%3E%3Cpolygon fill='%234A5FAA' points='1600 800 0 800 0 750 1600 450'/%3E%3C/g%3E%3C/svg%3E");
  background-attachment: fixed;
  background-size: cover;
  margin: 0;
  font-family: "Poppins", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

/* ---- Scrollbar Styles ----------------------------- */
html {
  scroll-behavior: smooth;

  /* For Firefox */
  overflow-y: scroll;
  scrollbar-color: #5967af #261d54;
  scrollbar-width: thin;
}

/* For all browsers except firefox */
body::-webkit-scrollbar {
  width: 0.5em;
  background-color: #261d54;
}

body::-webkit-scrollbar-thumb {
  background-color: #5967af;
}

body::-webkit-scrollbar-thumb:active {
  background-color: #7b8ad4;
}

/* ---------------------------------------------------- */

.loader_wrapper {
  width: 99vw;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.app_container {
  background-color: #34436d;
  min-height: 100vh;
  border-radius: 2px;
  border: 1px solid rgba(255, 255, 255, 0.15);
  margin: var(--app-container-margin);
  width: 940px;
  background-image: repeating-linear-gradient(-45deg,
      rgba(255, 255, 255, 0.08),
      rgba(255, 255, 255, 0.08) 1px,
      transparent 1px,
      transparent 6px);
  background-size: 3px 3px;
  height: auto;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

#top {
  margin: var(--top-section-margin);
  /*border: 1px solid white;*/
}

#content {
  margin: var(--content-section-margin);
  /*padding: 0 10px 0 10px;*/
  /*border: 1px solid white;*/
}

#bottom {
  margin: var(--bottom-section-margin);
  /*border: 1px solid white;*/
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.green {
  color: var(--light-green);
}

/* --------------------------------------
classes and animations used for Headers
---------------------------------------- */
.tab {
  text-align: center;
  width: 63px;
  height: 100%;
  transition: 500ms;
  animation-name: waver;
  animation-duration: 2s;
  animation-iteration-count: infinite;
  color: white;
}

.tab>* {
  cursor: pointer;
}

.vertical_text {
  text-transform: uppercase;
  width: 20px;
  margin: 20px auto 20px auto;
  writing-mode: vertical-lr;
  text-orientation: upright;
  color: white !important;
}

.animated_arrow {
  font-size: 45px;
  transition: var(--slide-transition);
  cursor: pointer;
  animation-name: waver;
  animation-duration: var(--waver-duration);
  animation-iteration-count: infinite;
}

@keyframes waver {
  0% {
    opacity: 0.3;
  }

  50% {
    opacity: 0.8;
  }

  100% {
    opacity: 0.3;
  }
}

@media (min-width:850px) and (max-width:1000px) {
  .app_container {
    width: 800px;
    overflow-x: hidden;
  }
}

@media screen and (max-width:849px) {
  .app_container {
    min-width: 375px !important;
    width: 100vw !important;
    border-radius: 0px;
    border: 1px solid transparent;
    margin: 0 !important;
    background-color: rgb(24, 58, 100);
    box-shadow: none;
    overflow-x: hidden;
  }
}

